# DjangoDefault

./: .dockerignore  .env-example  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  Taskfile.yml  celerybeat-schedule  db.sqlite3  docker-compose.yml  generate_secret.py  pyproject.toml  qodana.yaml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml  deploy.yml  django.yml  notify.yml
apps/shared/: admin.py  urls.py
apps/shared/admin/: __init__.py  base.py  dashboard.py
apps/shared/encoders/: __init__.py
apps/shared/exceptions/: auth.py  http404.py
apps/shared/management/commands/: createadmin.py  makeapp.py  nginx.py  secret_key.py
apps/shared/middlewares/: silk.py
apps/shared/pagination/: __init__.py
apps/shared/utils/: authentication.py
apps/shared/views/: __init__.py  dashboard.py
apps/tests/: apps.py
assets/locale/uz/LC_MESSAGES/: django.po
assets/static/css/: jazzmin.css  responsive.css  style.css  style.css.map  style.scss  styles.css  tailwind.css
assets/static/js/: custom.js  main.js
assets/templates/: index.html
assets/templates/admin/: index.html
compose/django/: Dockerfile  start
compose/nginx/: Dockerfile  nginx.conf
core/: settings.py  swagger.py  urls.py
core/config/: __init__.py  apps.py  cache.py  ckeditor5.py  jazzmin.py  jwt.py  logs.py  rest_framework.py  unfold.py  unfold_navigation.py
deployments/: .gitignore
deployments/compose/backend/: Dockerfile  start
deployments/compose/backup/: Dockerfile  backup.sh
deployments/compose/django/: Dockerfile  entrypoint  start
deployments/compose/nginx/: Dockerfile  nginx.conf
deployments/nginx/: kshdjfiusgfs.conf
envs/: .env-example  .env.example
locale/en/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
locale/uz/LC_MESSAGES/: django.mo  django.po
src/apps/shared/: apps.py  urls.py
src/apps/shared/admin/: base.py
src/apps/shared/encoders/: encoder.py
src/apps/shared/exceptions/: auth.py  http404.py
src/apps/shared/middlewares/: prometheus.py
src/apps/shared/models/: base.py
src/apps/shared/pagination/: custom.py
src/core/: celery.py  settings.py  urls.py
src/core/config/: __init__.py  apps.py  jwt.py  logs.py  rest_framework.py  sentry.py  swagger.py  unfold.py  unfold_navigation.py
static/css/: style.css
templates/: index.html
(+12 files in other folders)
